--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nodeboot/test",
-    "version": "1.5.0",
+    "version": "1.6.0",
     "description": "Test framework for Node_Boot projects",
     "author": "Manuel Santos <ney.br.santos@gmail.com>",
     "license": "MIT",
@@ -31,7 +31,8 @@
     "dependencies": {
         "@nodeboot/context": "^1.13.0",
         "@nodeboot/core": "^1.15.0",
-        "@nodeboot/config": "^1.3.1"
+        "@nodeboot/config": "^1.3.1",
+        "winston": "^3.10.0"
     },
     "optionalDependencies": {
         "pactum": "^3.7.6",
