--- a/demos/jest-express-demo/package.json
+++ b/demos/jest-express-demo/package.json
@@ -27,44 +27,48 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "test": "jest --passWithNoTests",
-        "typecheck": "tsc"
+        "typecheck": "tsc",
+        "nodeboot:update": "pnpm update @nodeboot/*@latest"
     },
     "dependencies": {
-        "@nodeboot/config": "^1.3.1",
-        "@nodeboot/context": "^1.13.0",
-        "@nodeboot/core": "^1.15.0",
-        "@nodeboot/starter-openapi": "^2.4.2",
-        "@nodeboot/authorization": "^1.3.1",
-        "@nodeboot/di": "^1.4.1",
+        "@nodeboot/authorization": "^1.3.3",
+        "@nodeboot/config": "^1.3.3",
+        "@nodeboot/context": "^2.0.0",
+        "@nodeboot/core": "^1.15.2",
+        "@nodeboot/di": "^1.4.3",
         "@nodeboot/error": "^1.3.0",
-        "@nodeboot/starter-actuator": "^1.7.1",
-        "@nodeboot/starter-persistence": "^1.11.0",
-        "@nodeboot/express-server": "^1.9.0",
-        "express": "^4.18.2",
+        "@nodeboot/express-server": "^1.9.2",
+        "@nodeboot/starter-actuator": "^1.7.3",
+        "@nodeboot/starter-openapi": "^2.4.4",
+        "@nodeboot/starter-persistence": "^1.12.1",
+        "better-sqlite3": "^9.6.0",
         "body-parser": "^1.20.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "cookie": "^1.0.2",
         "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "helmet": "^8.1.0",
         "hpp": "^0.2.3",
         "minimist": "^1.2.8",
+        "mongodb": "^5.9.2",
         "multer": "^2.0.2",
-        "cookie": "^1.0.2",
-        "express-session": "^1.17.3",
-        "typedi": "^0.10.0",
-        "winston": "^3.10.0",
         "reflect-metadata": "^0.2.1",
-        "better-sqlite3": "^9.6.0",
-        "typeorm": "^0.3.20"
+        "typedi": "^0.10.0",
+        "typeorm": "^0.3.20",
+        "winston": "^3.10.0"
     },
     "devDependencies": {
         "@nodeboot/jest": "workspace:*",
-        "jest": "^29.5.0",
         "@types/jest": "^29.5.11",
-        "ts-jest": "^29.1.1",
-        "pactum": "^3.7.6",
+        "@types/supertest": "^6.0.2",
         "axios": "^1.12.2",
+        "jest": "^29.5.0",
+        "mongodb": "^5.9.2",
+        "mongodb-memory-server": "^8.16.1",
+        "pactum": "^3.7.6",
         "supertest": "^7.0.0",
-        "@types/supertest": "^6.0.2"
+        "ts-jest": "^29.1.1"
     }
 }
