--- a/demos/jest-fastify-demo/package.json
+++ b/demos/jest-fastify-demo/package.json
@@ -27,45 +27,45 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "test": "jest --passWithNoTests",
-        "typecheck": "tsc"
+        "typecheck": "tsc",
+        "nodeboot:update": "pnpm update @nodeboot/*@latest"
     },
     "dependencies": {
-        "@nodeboot/config": "^1.3.1",
-        "@nodeboot/context": "^1.13.0",
-        "@nodeboot/core": "^1.15.0",
-        "@nodeboot/starter-openapi": "^2.4.2",
-        "@nodeboot/authorization": "^1.3.1",
-        "@nodeboot/di": "^1.4.1",
-        "@nodeboot/error": "^1.3.0",
-        "@nodeboot/starter-actuator": "^1.7.1",
-        "@nodeboot/starter-persistence": "^1.11.0",
-        "@nodeboot/fastify-server": "^1.8.0",
-        "katxupa": "^1.10.4",
-        "reflect-metadata": "^0.2.1",
-        "fastify": "^4.21.0",
         "@fastify/cookie": "^9.0.4",
-        "@fastify/session": "^10.4.0",
-        "@fastify/multipart": "^7.7.3",
-        "@fastify/view": "^8.0.0",
         "@fastify/cors": "^8.4.1",
         "@fastify/helmet": "^11.1.1",
-        "@fastify/swagger-ui": "^1.9.3",
+        "@fastify/multipart": "^7.7.3",
+        "@fastify/session": "^10.4.0",
         "@fastify/swagger": "^8.10.0",
-        "typeorm": "^0.3.27",
+        "@fastify/view": "^8.0.0",
+        "@nodeboot/authorization": "^1.3.3",
+        "@nodeboot/config": "^1.3.3",
+        "@nodeboot/context": "^2.0.0",
+        "@nodeboot/core": "^1.15.2",
+        "@nodeboot/di": "^1.4.3",
+        "@nodeboot/error": "^1.3.0",
+        "@nodeboot/fastify-server": "^1.8.2",
+        "@nodeboot/starter-actuator": "^1.7.3",
+        "@nodeboot/starter-openapi": "^2.4.4",
+        "@nodeboot/starter-persistence": "^1.12.0",
         "better-sqlite3": "^9.6.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "fastify": "^4.21.0",
+        "katxupa": "^1.10.4",
+        "reflect-metadata": "^0.2.1",
         "typedi": "^0.10.0",
+        "typeorm": "^0.3.27",
         "winston": "^3.10.0"
     },
     "devDependencies": {
-        "@nodeboot/jest": "workspace:*",
-        "jest": "^29.5.0",
+        "@nodeboot/jest": "^1.4.1",
         "@types/jest": "^29.5.11",
-        "ts-jest": "^29.1.1",
-        "pactum": "^3.7.6",
+        "@types/supertest": "^6.0.2",
         "axios": "^1.7.9",
+        "jest": "^29.5.0",
+        "pactum": "^3.7.6",
         "supertest": "^7.0.0",
-        "@types/supertest": "^6.0.2"
+        "ts-jest": "^29.1.1"
     }
 }
