--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,16 +29,24 @@
         "typecheck": "tsc"
     },
     "dependencies": {
-        "@nodeboot/context": "^1.13.0",
-        "@nodeboot/core": "^1.15.0",
-        "@nodeboot/config": "^1.3.1",
+        "@nodeboot/config": "^1.3.3",
+        "@nodeboot/context": "^2.0.0",
+        "@nodeboot/core": "^1.15.2",
         "winston": "^3.10.0"
     },
     "optionalDependencies": {
-        "pactum": "^3.7.6",
-        "typeorm": "^0.3.27",
         "axios": "^1.7.9",
-        "supertest": "^7.0.0"
+        "pactum": "^3.7.6",
+        "supertest": "^7.0.0",
+        "typeorm": "^0.3.27"
+    },
+    "peerDependencies": {
+        "testcontainers": "^11.7.2"
+    },
+    "peerDependenciesMeta": {
+        "testcontainers": {
+            "optional": true
+        }
     },
     "devDependencies": {
         "@types/supertest": "^6.0.2"
