--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,8 @@
         "@nodeboot/config": "^1.3.3",
         "@nodeboot/context": "^2.0.0",
         "@nodeboot/core": "^1.15.2",
-        "winston": "^3.10.0"
+        "winston": "^3.10.0",
+        "@sinonjs/fake-timers": "^11.2.2"
     },
     "optionalDependencies": {
         "axios": "^1.7.9",
