--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
     "$schema": "https://unpkg.com/@changesets/config@1.3.0/schema.json",
     "changelog": "./nodeboot-changelog.js",
     "commit": false,
-    "linked": [],
+    "linked": [["@nodeboot/test", "@nodeboot/node-test"]],
     "access": "public",
     "baseBranch": "main",
     "updateInternalDependencies": "patch",
