--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@nodeboot/test",
-    "version": "2.11.0",
+    "version": "2.12.0",
     "description": "Test framework for Node_Boot projects",
     "author": "Manuel Santos <ney.br.santos@gmail.com>",
     "license": "MIT",
@@ -32,8 +32,8 @@
         "@nodeboot/config": "^1.3.6",
         "@nodeboot/context": "^2.2.1",
         "@nodeboot/core": "^1.16.2",
-        "winston": "^3.10.0",
-        "@sinonjs/fake-timers": "^11.2.2"
+        "@sinonjs/fake-timers": "^11.2.2",
+        "winston": "^3.10.0"
     },
     "optionalDependencies": {
         "axios": "^1.7.9",
@@ -42,15 +42,20 @@
         "typeorm": "^0.3.27"
     },
     "peerDependencies": {
+        "mongodb-memory-server": "^10.1.2",
         "testcontainers": "^11.7.2"
     },
     "peerDependenciesMeta": {
         "testcontainers": {
             "optional": true
+        },
+        "mongodb-memory-server": {
+            "optional": true
         }
     },
     "devDependencies": {
-        "@types/supertest": "^6.0.2"
+        "@types/supertest": "^6.0.2",
+        "mongodb-memory-server": "^8.16.1"
     },
     "files": [
         "dist",
